Shortens img text

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <a target="_blank" href="https://www.twitch.tv/chrisantakimusic">
         <h1>
           <img
-            alt="Hey! I hope you enjoy this improvised ambient music 🎸🌊"
-            title="Hey! I hope you enjoy this improvised ambient music 🎸🌊"
+            alt="Enjoy these ambient tunes! 🎸🌊"
+            title="Enjoy these ambient tunes! 🎸🌊"
             src="les-paul.ico"
           />
         </h1>
