--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       name="viewport"
       content="width=device-width,minimum-scale=1,initial-scale=1"
     />
+    <meta name="theme-color" content="#0d1b1f" />
     <style>
       * {
         box-sizing: border-box;
@@ -27,7 +28,7 @@
 
       .background-loop {
         bottom: 0;
-        filter: hue-rotate(95deg);
+        filter: hue-rotate(100deg);
         height: 100%;
         image-rendering: optimizeSpeed;
         image-rendering: pixelated;
@@ -74,8 +75,8 @@
       <a target="_blank" href="https://www.twitch.tv/chrisantakimusic">
         <h1>
           <img
-            alt="Enjoy these ambient tunes! 🎸🌊"
-            title="Enjoy these ambient tunes! 🎸🌊"
+            alt="Hope you enjoy this ambient music!"
+            title="Hope you enjoy this ambient music!"
             src="les-paul.ico"
           />
         </h1>
