--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <a target="_blank" href="https://www.twitch.tv/chrisantakimusic">
         <h1>
           <img
-            alt="Hope you enjoy this ambient music!"
-            title="Hope you enjoy this ambient music!"
+            alt="Here's a link to my ambient music. I hope you enjoy it!"
+            title="Here's a link to my ambient music. I hope you enjoy it!"
             src="les-paul.ico"
           />
         </h1>
